<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pref_search_intro"
                android:id="@+id/pref_search_intro"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_search_language"
                android:paddingTop="20dp"
                android:id="@+id/pref_search_language" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_language_fr"
                android:id="@+id/pref_search_language_fr"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_language_en"
                android:id="@+id/pref_search_language_en"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_search_hair_color"
                android:paddingTop="20dp"
                android:id="@+id/pref_search_hair_color" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_color_blond"
                android:id="@+id/pref_search_hair_color_blond"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_color_brown"
                android:id="@+id/pref_search_hair_color_brown"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_color_black"
                android:id="@+id/pref_search_hair_color_black"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_color_ginger"
                android:id="@+id/pref_search_hair_color_ginger"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_color_greywhite"
                android:id="@+id/pref_search_hair_color_greywhite"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_color_other"
                android:id="@+id/pref_search_hair_color_other"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_search_hair_type"
                android:paddingTop="20dp"
                android:id="@+id/pref_search_hair_type" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_type_short"
                android:id="@+id/pref_search_hair_type_short"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_type_medium"
                android:id="@+id/pref_search_hair_type_medium"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_hair_type_long"
                android:id="@+id/pref_search_hair_type_long"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_search_eyes_color"
                android:paddingTop="20dp"
                android:id="@+id/pref_search_eyes_color"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_eyes_color_blue"
                android:id="@+id/pref_search_eyes_color_blue"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_eyes_color_brown"
                android:id="@+id/pref_search_eyes_color_brown"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_eyes_color_black"
                android:id="@+id/pref_search_eyes_color_black"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_eyes_color_green"
                android:id="@+id/pref_search_eyes_color_green"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_search_eyes_color_grey"
                android:id="@+id/pref_search_eyes_color_grey"
                android:checked="true"
                android:paddingTop="10dp"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_search_age_max"
                android:paddingTop="20dp"
                android:id="@+id/pref_search_age" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:text="200"
                android:ems="10"
                android:id="@+id/pref_search_age_max"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_search_age_min"
                android:paddingTop="20dp"
                android:id="@+id/pref_search_age_m" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:text="0"
                android:ems="10"
                android:id="@+id/pref_search_age_min"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pref_search_distance"
                android:paddingTop="10dp"
                android:id="@+id/pref_search_distance" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:text="1000000"
                android:ems="10"
                android:id="@+id/pref_search_distance_max"
                android:paddingTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>