<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lsinf1225.groupeo.uclove.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/connexion"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/main_username"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/main_password"
        android:layout_below="@+id/main_username"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/or"
        android:id="@+id/textView2"
        android:layout_below="@+id/main_connection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/main_create_account"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/main_password"
        android:layout_alignStart="@+id/main_password"
        android:layout_alignRight="@+id/main_password"
        android:layout_alignEnd="@+id/main_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/main_connection"
        android:onClick="connection"
        android:layout_below="@+id/main_password"
        android:layout_alignLeft="@+id/main_password"
        android:layout_alignStart="@+id/main_password"
        android:layout_alignRight="@+id/main_password"
        android:layout_alignEnd="@+id/main_password" />
</RelativeLayout>
